fixes bug on small screens

--- a/src/components/simple-nav/simple-nav.css
+++ b/src/components/simple-nav/simple-nav.css
@@ -43,6 +43,10 @@
   display: table;
 }
 
+#dropdowns {
+  clear: both;
+}
+
 .left.list-wrapper {
   float: left;
 }
@@ -54,13 +58,20 @@
 
 .list-wrapper {
   margin-top: -100%;
-  -webkit-transition: margin-top 0.4s ease-out;
-  transition: margin-top 0.4s ease-out;
+  max-height: 0;
   z-index: -10;
   padding: 0.5em;
   padding-bottom: 1em;
+  opacity: 0;
+  -webkit-transition: margin-top 0.4s ease-out, opacity 0.3s 0s,
+    max-height 0s 0.4s;
+  transition: margin-top 0.4s ease-out, opacity 0.3s 0s, max-height 0s 0.4s;
 }
 
 .show-true {
   margin-top: 0%;
+  max-height: 100vh;
+  opacity: 1;
+  -webkit-transition: margin-top 0.4s ease-out, opacity 0.3s 0s;
+  transition: margin-top 0.4s ease-out, opacity 0.3s 0s;
 }
